Yet more code quality improvements. Fixed a potential null pointer exception in Abc Player when args is null. Stop using old Java 6/7 internal beta property "sun.sound.useNewAudioEngine".